# data-modeling-and-design

./: CHANGELOG.md  README.md  data-modeling-and-design-assignment-hs.cabal  data-modeling-and-design.cabal  package.yaml
app/: Main.hs
src/: Lib.hs
