cabal-version:      3.0
name:               data-modeling-and-design
version:            0.1.0.0
license:            BSD-3-Clause
author:             Darren Kim
maintainer:         darren.minsoo.kim@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable data-modeling-and-design
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
                    , regex-posix
    hs-source-dirs:   app
    default-language: Haskell2010
